# DearCyFi

./: .gitignore  .gitmodules  DCG_Candle_Utils.py  DearCyFi.py  DearCyFi_Demo.py  README.md  pyproject.toml  requirements.txt  tooltip_issue_fix.md
.github/agents/: DCG_Agent.agent.md
Mermaid/Locator_Loop_3-28-26/: axes_resize_callback_flow.md  flowchart TD.mmd
PyTimeLocator/: locator_time3.py
candle_utils/: candle_gen.py  gap_utils.py
examples/: README.md
openspec/: project.md
openspec/changes/add-installable-python-package/: design.md  proposal.md  tasks.md
openspec/changes/add-label-overlap-diagnostic/: design.md  proposal.md  tasks.md
openspec/changes/add-label-overlap-diagnostic/specs/label-overlap-diagnostic/: spec.md
openspec/changes/archive/2026-03-11-add-installable-python-package/: design.md
openspec/changes/archive/2026-03-11-add-installable-python-package/specs/packaging/: spec.md
openspec/specs/packaging/: spec.md
src/: DearCyFi.py
src/dearcyfi/: DCG_Bar_Utils.py  DCG_Candle_Utils.py  __init__.py  core.py
src/dearcyfi/PyTimeLocator/: locator_time3.py
src/dearcyfi/candle_utils/: candle_gen.py  gap_utils.py
src/dearcyfi/examples/: DearCyFi_Demo.py
tests/: test_candle_gen.py
